Single canvas with breakout room

--- a/app/index.html
+++ b/app/index.html
@@ -6,8 +6,8 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>AngularJS Template</title>
-        <meta name="description" content="AngularJS Template">
+        <title>AngularJS Zoom Video Breakout</title>
+        <meta name="description" content="AngularJS Zoom Video Breakout">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta http-equiv="origin-trial" content="AsLiPh2zpXf8OoH3EqUwTQqKl74R/ueLhzuTlH97AZHWFolqbZw53wivXRJ6ZC4Bt8VUrkBSabBbHGz6v/faMAIAAABgeyJvcmlnaW4iOiJodHRwOi8vbG9jYWxob3N0OjgwMDAiLCJmZWF0dXJlIjoiVW5yZXN0cmljdGVkU2hhcmVkQXJyYXlCdWZmZXIiLCJleHBpcnkiOjE2NTg4Nzk5OTl9" />
         <link rel="shortcut icon" href="">
@@ -20,7 +20,7 @@
         <div class="container">
             <header data-ui-view="header"></header>
             <nav data-ui-view="menu" role="navigation"></nav>
-            <section data-ui-view="breadcrumbs"></section>
+            <!-- <section data-ui-view="breadcrumbs"></section> -->
             <section data-ui-view="content"></section>
             <footer data-ui-view="footer"></footer>
         </div>
