Multicanvas with breakout room

--- a/app/core/todos/listView.html
+++ b/app/core/todos/listView.html
@@ -35,9 +35,9 @@
     <canvas id="video-canvas-teacher" class="video-canvas" width="900" height="100" style="background-color: yellow"></canvas>
 </div>
 <!-- For multi canvas -->
-<!-- <div>
+<div>
     <canvas id="video-canvas-other" class="video-canvas" width="900" height="100" style="background-color: green"></canvas>
-</div> -->
+</div>
 <div class="panel panel-default">
     <div class="panel-body">
         <!-- <button id="delete-btn" class="btn btn-danger" data-ng-click="TLC.deleteCompleted()">
